feat: apply date and repository filters to all metrics consistently
- Add filterCommitsByDeployments() method to filter commits based on deployment date and repository
- Apply filters consistently to commitStats, pullRequestStats, repositoryStats, and DORA metrics
- Filter based on whether commits have deployments matching the criteria
- Update tests to validate that commitStats is filtered correctly
- Ensures complete consistency: all metrics respect the same filters

Breaking change: commitStats and pullRequestStats now respect filters
- Previously: these stats showed all-time totals regardless of filters
- Now: these stats only include commits with deployments matching the filters
- To get all-time totals, call the endpoint without filters